Adress the issues pointed out by sonar, Fix bug with ExtensionBar not showing the content

--- a/visualization/app/codeCharta/codeCharta.component.scss
+++ b/visualization/app/codeCharta/codeCharta.component.scss
@@ -92,7 +92,6 @@ code-charta-component {
 	}
 
 	.md-button.round-button {
-		margin-right: 0 !important;
 		float: right;
 		min-width: 36px;
 		width: 36px;
